Adicionado o spin na tela de login para após adicionar a funcionalidade de condição

--- a/src/pages/login/index.css
+++ b/src/pages/login/index.css
@@ -3,3 +3,10 @@
     background-color: #403876;
     color: white;
 }
+.ant-spin-dot-item {
+    background-color: white !important;
+}
+
+.btn-color {
+    color: black;
+}
